--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,13 @@ services:
     ports:
       - 3000:8080
 
+  tomcat:
+    image: tomcat:10.1-jdk17
+    volumns:
+      - ./target/api.war:/usr/local/tomcat/webapps/api.war
+    ports:
+      - 3000:8080
+
   db:
     image: mysql
     environment:
