feat: done user

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -9,3 +9,16 @@ appender.console.layout.charset = UTF-8
 rootLogger.level = info
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = ConsoleAppender
+
+# SQL execution
+logger.hibernate.name = org.hibernate.SQL
+logger.hibernate.level = debug
+
+# JDBC parameter binding
+logger.jdbc-bind.name=org.hibernate.orm.jdbc.bind
+logger.jdbc-bind.level=trace
+
+# JDBC result set extraction
+# logger.jdbc-extract.name=org.hibernate.orm.jdbc.extract
+# logger.jdbc-extract.level=trace
+
