--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,12 +1,15 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
+# hibernate.highlight_sql=true
+
 hibernate.current_session_context_class=thread
 hibernate.hbm2ddl.auto=update
 hibernate.connection.characterEncoding=UTF-8
 hibernate.connection.useUnicode=true
 hibernate.connection.charSet=UTF-8
 hibernate.hbm2ddl.import_files=database.sql
+
 # hibernate.connection.url=jdbc:mysql://103.20.102.120:3306/burger?createDatabaseIfNotExist=true
 # hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 # hibernate.connection.user=root
