--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -8,7 +8,7 @@ hibernate.hbm2ddl.auto=update
 hibernate.connection.characterEncoding=UTF-8
 hibernate.connection.useUnicode=true
 hibernate.connection.charSet=UTF-8
-# hibernate.hbm2ddl.import_files=import.sql
+hibernate.hbm2ddl.import_files=database.sql
 
 # hibernate.connection.url=jdbc:mysql://103.20.102.120:3306/burger?createDatabaseIfNotExist=true
 # hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
