--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
 
   tomcat:
     image: tomcat:10.1-jdk17
-    volumns:
+    volumes:
       - ./target/api.war:/usr/local/tomcat/webapps/api.war
     ports:
       - 3000:8080
