--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,7 +1,7 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.show_sql=true
-hibernate.format_sql=true
-# hibernate.highlight_sql=true
+hibernate.show_sql=false
+hibernate.format_sql=false
+hibernate.highlight_sql=false
 
 hibernate.current_session_context_class=thread
 hibernate.hbm2ddl.auto=update
@@ -16,7 +16,7 @@ hibernate.hbm2ddl.import_files=database.sql
 # hibernate.connection.password=root
 
 hibernate.connection.provider_class=com.zaxxer.hikari.hibernate.HikariConnectionProvider
-hibernate.hikari.dataSource.url=jdbc:mysql://103.20.102.120:3306/burger?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
+hibernate.hikari.dataSource.url=jdbc:mysql://localhost:3306/burger?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
 hibernate.hikari.dataSource.user=root
 hibernate.hikari.dataSource.password=root
 hibernate.hikari.dataSourceClassName=com.mysql.cj.jdbc.MysqlDataSource
