--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -12,11 +12,11 @@ rootLogger.appenderRef.stdout.ref = ConsoleAppender
 
 # SQL execution
 logger.hibernate.name = org.hibernate.SQL
-logger.hibernate.level = debug
-
+logger.hibernate.level = info
+#logger.hibernate.type.descriptor.sql=TRACE
 # JDBC parameter binding
 logger.jdbc-bind.name=org.hibernate.orm.jdbc.bind
-logger.jdbc-bind.level=trace
+#logger.jdbc-bind.level=trace
 
 # JDBC result set extraction
 # logger.jdbc-extract.name=org.hibernate.orm.jdbc.extract
