--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -8,7 +8,7 @@ hibernate.hbm2ddl.auto=update
 hibernate.connection.characterEncoding=UTF-8
 hibernate.connection.useUnicode=true
 hibernate.connection.charSet=UTF-8
-hibernate.hbm2ddl.import_files=database.sql
+# hibernate.hbm2ddl.import_files=database.sql
 
 # hibernate.connection.url=jdbc:mysql://103.20.102.120:3306/burger?createDatabaseIfNotExist=true
 # hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
@@ -16,9 +16,9 @@ hibernate.hbm2ddl.import_files=database.sql
 # hibernate.connection.password=root
 
 hibernate.connection.provider_class=com.zaxxer.hikari.hibernate.HikariConnectionProvider
-hibernate.hikari.dataSource.url=jdbc:mysql://localhost:3306/burger?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
+hibernate.hikari.dataSource.url=jdbc:mysql://103.20.102.120:9999/burger
 hibernate.hikari.dataSource.user=root
-hibernate.hikari.dataSource.password=root
+hibernate.hikari.dataSource.password=mhAc6iiKN884CWzoQhZS
 hibernate.hikari.dataSourceClassName=com.mysql.cj.jdbc.MysqlDataSource
 hibernate.hikari.minimumIdle=5
 hibernate.hikari.maximumPoolSize=10
